--- a/example.html
+++ b/example.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Open Close Example</title>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/s-open-close@1.0.0/dist/index.js" defer></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@yzhura/s-open-close@1.0.0/dist/index.js" defer></script> -->
     <script src="./dist/index.js"></script>
     <style>
         
